fix: Re-aligned work section title.

--- a/style.css
+++ b/style.css
@@ -389,6 +389,7 @@ textarea:focus-visible {
 
 .projects-section .section-title {
     margin-bottom: 4rem;
+    text-align: center;
 }
 
 
